# kikakyusyu

./: .gitignore  DEVELOPMENT_cn.md  PROJECT_INTERVIEW_GUIDE.md  PROJECT_INTERVIEW_GUIDE_JP.md  README.md  README_cn.md  main.py  pyproject.toml  system.md  system_v2.md
.streamlit/: machine_id_v4
backend/: API_REFERENCE.md  BACKEND_ARCHITECTURE.md  app.py  logs.jsonl  schemas.py
front-streaming/: FRONTEND_ARCHITECTURE.md  FRONTEND_REFERENCE.md  app.py  area.jsonl  gpu_stats.py  rag_docs_merged.jsonl
get_html/: merge_csv.py
get_html/data/: gomi_924_10041.csv  gomi_924_10043.csv  gomi_924_10051.csv  gomi_924_10058.csv  gomi_924_10064.csv  gomi_924_10070.csv  gomi_924_10077.csv  gomi_924_10083.csv
knowledge_files/: 2025年度 言語メディア処理論 最終課題.docx  構成案.txt
models/swallow/: Modelfile
rag/: HYBRID_GROUNDING_V2_UPDATE.md  RAG_DOCUMENTATION_INDEX.md  RAG_HYBRID_IMPLEMENTATION.md  RAG_IMPLEMENTATION_GUIDE.md  RAG_IMPROVEMENT_0201.md  RAG_QUICK_REFERENCE.md  RAG_SYSTEM_ARCHITECTURE.md  benchmark_hybrid.py  csv_to_jsonl.py  debug_hybrid.py  gomi.csv  gomi_merged.csv  gomi_names.py  hybrid_grounding.py  items.txt  rag_demo.py  rag_demo2.py  rag_demo3.py  rag_docs.jsonl  test_hybrid.py  user_knowledge.py
