[project]
name = "tomoaki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "chromadb>=1.0.20",
    "datetime>=5.5",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "lxml>=6.0.1",
    "mecab>=0.996.11",
    "mecab-python3>=1.0.10",
    "ollama>=0.5.3",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "pypdf2>=3.0.1",
    "requests>=2.32.5",
    "streamlit>=1.49.1",
    "uvicorn>=0.35.0",
]

